@@ -1,3 +1,7 @@
+2020-06-20  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .travis.yml: Upgrade to 'bionic' and R 4.0.0
+
 2020-06-19  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Add 'last commit' badge
